# kala

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/kala/: __init__.py  cli.py  models.py  report.py
src/kala/analyzer/: bias.py  consistency.py
src/kala/temporal/: duration.py  ordering.py  perception.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_kala.py
